<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResumenNino" >
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView android:id="@+id/etqPrimero" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/primerPremio" android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView android:id="@+id/valorPrimero" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>





        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView android:id="@+id/etqSegundo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/segundoPremio" android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView android:id="@+id/valorSegundo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/etqTercero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tercerPremio"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/valorTercero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/etqExt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extraccion4"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/valorExt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">

            <TextView android:id="@+id/etqExt3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/extraccion3" android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView android:id="@+id/valorExt3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">

            <TextView android:id="@+id/etqExt2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/extraccion2" android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView android:id="@+id/valorExt2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">

            <TextView android:id="@+id/etqReintegro" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reintegro" android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView android:id="@+id/valorReintegro" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:textAppearance="?android:attr/textAppearanceMedium" />

             </LinearLayout>

        <TextView android:id="@+id/estado" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView android:id="@+id/fecha" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView android:id="@+id/pdf" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView android:id="@+id/actalizacionNino" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:text="" />

    </LinearLayout></ScrollView>

    

</RelativeLayout>
